tests/NormalTests/paczka1/small_fuzzy/54039324.err
Error in line 3: VPKxCp A127 82,37
Error in line 9: mHPMknlP A430 29,9
